[gd_scene load_steps=9 format=2]

[ext_resource path="res://textures/menu/restart.png" type="Texture" id=1]
[ext_resource path="res://src/other/End/end_screen.gd" type="Script" id=2]
[ext_resource path="res://textures/menu/exit.png" type="Texture" id=3]
[ext_resource path="res://textures/menu/menu.png" type="Texture" id=4]
[ext_resource path="res://src/other/back/back.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/other/save/save.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "end"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -48 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "start"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -48 ), Vector2( 0, 0 ) ]
}

[node name="end_screen" type="Node2D"]
position = Vector2( 0, -48 )
script = ExtResource( 2 )

[node name="back" parent="." instance=ExtResource( 5 )]

[node name="anim" type="AnimationPlayer" parent="."]
anims/end = SubResource( 1 )
anims/start = SubResource( 2 )

[node name="menu" type="TouchScreenButton" parent="."]
modulate = Color( 0.356863, 0.431373, 1, 1 )
position = Vector2( 10, 16 )
normal = ExtResource( 4 )

[node name="replay" type="TouchScreenButton" parent="."]
modulate = Color( 0.67451, 0.196078, 0.196078, 1 )
position = Vector2( 34, 16 )
normal = ExtResource( 1 )

[node name="exit" type="TouchScreenButton" parent="."]
modulate = Color( 0.356863, 0.431373, 1, 1 )
position = Vector2( 58, 16 )
normal = ExtResource( 3 )

[node name="save" parent="." instance=ExtResource( 6 )]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
[connection signal="pressed" from="menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="replay" to="." method="_on_replay_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
